--- a/controle-financas/financas/templates/listar_dividas.html
+++ b/controle-financas/financas/templates/listar_dividas.html
@@ -9,12 +9,29 @@
 
   <div class="container mt-5">
     <h1 class="mb-4">💸 Lista de Dívidas</h1>
+    <h3>Total de dívidas em aberto: R$ {{ total_dividas|floatformat:2 }}</h3>
+
+
 
     <ul class="list-group mb-4">
       {% for divida in dividas %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          {{ divida.descricao }}
-          <span class="badge bg-danger rounded-pill">R$ {{ divida.valor }}</span>
+          <div>
+            {{ divida.descricao }}
+            {% if divida.foi_pago %}
+              <span class="badge bg-success ms-2">Pago ✅</span>
+            {% else %}
+              <span class="badge bg-warning text-dark ms-2">Em aberto ❌</span>
+            {% endif %}
+          </div>
+
+          <div>
+            <span class="badge bg-danger rounded-pill me-3">R$ {{ divida.valor }}</span>
+
+            {% if not divida.foi_pago %}
+              <a href="{% url 'pagar_divida' divida.id %}" class="btn btn-sm btn-primary">Pagar</a>
+            {% endif %}
+          </div>
         </li>
       {% empty %}
         <li class="list-group-item text-muted">Nenhuma dívida cadastrada.</li>
